# learncpp20

./: .gitignore  LICENSE
01_template/: CMakeLists.txt  coub_volume.h  main.cpp
02_arrays/: CMakeLists.txt  arrays.cpp
03_pointers/: CMakeLists.txt  pointer.cpp
04_pass_by_reference/: CMakeLists.txt  pass_by_reference.cpp
05_const_ptr/: CMakeLists.txt  const_ptr.cpp
06_span_and_old_array/: CMakeLists.txt  span.cpp
07_simple_class/: account.h  main.cpp
08_class_with_constructor/: Account.h  CMakeLists.txt  main.cpp
09_class_with_constr_several_param/: Account.h  CMakeLists.txt  main.cpp
10_class_with_sep_implem/: Account.cpp  Account.h  CMakeLists.txt  main.cpp
11_class_composition/: Account.cpp  Account.h  Time.cpp  Time.h  main.cpp
12_static_method/: CMakeLists.txt  Martian.cpp  Martian.h  main.cpp
13_simple_inheretence/: AccountBase.cpp  AccountBase.h  AccountWithCommission.cpp  AccountWithCommission.h  CMakeLists.txt  main.cpp
14_simple_polymorphism/: CMakeLists.txt  Car.cpp  Car.h  TeslaCar.cpp  TeslaCar.h  main.cpp
15_abstract_class/: CMakeLists.txt  Human.cpp  Human.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
16_smart_pointer_unic_ptr/: CMakeLists.txt  main.cpp
17_class_myArray/: CMakeLists.txt  MyArray.cpp  MyArray.h  main.cpp
17_class_myArray/.cache/clangd/index/: MyArray.cpp.8D6C3DC9C2CCB0E1.idx  MyArray.h.3A740919F516A7DD.idx  main.cpp.E668767C6FEB33E3.idx
